# smart-home-ecosystem

./: .gitignore  README.md
docs/: checklist.txt  dev-log.md  rotary_encoder_documentation.md
enclosure/3d models tests/: bits holder v1.stl  bits holderv 2.stl  drill bit v1.stl  drill bit v2.stl  drill bit v3.stl  led controller cover 1.stl  led controller cover 2.stl  screw organizer_1.stl  test s3 board.stl  test s3 board_2.stl
firmware/components/addressable/: CMakeLists.txt  addressable_led.cpp  addressable_led.h
firmware/components/audio/max98357/: CMakeLists.txt  max98357.cpp  max98357.h
firmware/components/button/: CMakeLists.txt  button.cpp  button.h
firmware/components/buzzer/: CMakeLists.txt  buzzer.cpp  buzzer.h
firmware/components/display/epaper/: CMakeLists.txt  epaper.cpp  epaper.h
firmware/components/display/gc9a01/: CMakeLists.txt  gc9a01.cpp  gc9a01.h
firmware/components/display/ili9341/: CMakeLists.txt  ili9341.cpp  ili9341.h  xpt2046.cpp  xpt2046.h
firmware/components/display/shared/: font_5x7.h  gamma_correction.h
firmware/components/display/ssd1306/: CMakeLists.txt  ssd1306.cpp  ssd1306.h
firmware/components/display/ssd1357/: CMakeLists.txt  ssd1357.cpp  ssd1357.h
firmware/components/display/st7789/: CMakeLists.txt  st7789.cpp  st7789.h
firmware/components/encoder/: CMakeLists.txt  encoder.cpp  encoder.h
firmware/components/i2c/pca9548a/: CMakeLists.txt  pca9548a.cpp  pca9548a.h
firmware/components/mosfet_driver/: CMakeLists.txt  mosfet_driver.cpp  mosfet_driver.h
firmware/components/pwm_dimmer/: CMakeLists.txt  pwm_dimmer.cpp  pwm_dimmer.h
firmware/components/relay/: CMakeLists.txt  relay.cpp  relay.h
firmware/components/touch/: CMakeLists.txt  touch.cpp  touch.h
firmware/components/vibration/: CMakeLists.txt  vibration.cpp  vibration.h
firmware/devices/modules/garage-controller/: CMakeLists.txt  garage_door_device.cpp  garage_door_device.h  garage_door_remote.cpp  garage_door_remote.h
firmware/devices/modules/smart-light/: CMakeLists.txt  smart_light_device.cpp  smart_light_device.h  smart_light_remote.cpp  smart_light_remote.h
firmware/devices/testing/garage-controller-test/: CMakeLists.txt  platformio.ini
firmware/devices/testing/smart-light-test/: CMakeLists.txt  platformio.ini
firmware/test-blink/src/: main.cpp
firmware/testing/audio-test/max98357-test/: CMakeLists.txt  platformio.ini
firmware/testing/button-test/: CMakeLists.txt  platformio.ini
firmware/testing/button-test/main/: CMakeLists.txt  main.cpp
firmware/testing/buzzer-test/: CMakeLists.txt  platformio.ini
firmware/testing/buzzer-test/main/: CMakeLists.txt  main.cpp
firmware/testing/compined-test/: CMakeLists.txt  platformio.ini
firmware/testing/compined-test/main/: CMakeLists.txt  main.cpp
firmware/testing/display-test/epaper-test/: CMakeLists.txt  platformio.ini
firmware/testing/display-test/gc9a01-test/: CMakeLists.txt  platformio.ini
firmware/testing/display-test/ili9341-test/: CMakeLists.txt  platformio.ini
firmware/testing/display-test/ssd1306-test/: CMakeLists.txt  platformio.ini
firmware/testing/display-test/ssd1357-test/: CMakeLists.txt  platformio.ini
firmware/testing/display-test/st7789-test/: CMakeLists.txt  platformio.ini
firmware/testing/dual-led-test/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
firmware/testing/dual-led-test/main/: CMakeLists.txt  main.cpp
firmware/testing/encoder-test/: CMakeLists.txt  platformio.ini
firmware/testing/encoder-test/main/: CMakeLists.txt  main.cpp
firmware/testing/i2c-test/pca9548a-test/: CMakeLists.txt  platformio.ini
firmware/testing/led-test/: CMakeLists.txt  platformio.ini
firmware/testing/led-test/main/: main.cpp
firmware/testing/mosfet-driver-test/: CMakeLists.txt  platformio.ini
firmware/testing/mosfet-driver-test/main/: main.cpp
firmware/testing/pwm-dimmer-test/: CMakeLists.txt  platformio.ini
firmware/testing/pwm-dimmer-test/main/: CMakeLists.txt  main.cpp
firmware/testing/relay-test/: CMakeLists.txt  platformio.ini
firmware/testing/relay-test/main/: CMakeLists.txt  main.cpp
firmware/testing/sk6812-test/: CMakeLists.txt  platformio.ini
firmware/testing/sk6812-test/main/: CMakeLists.txt  main.cpp
firmware/testing/test-blink/src/: main.cpp
firmware/testing/touch-test/: CMakeLists.txt  platformio.ini
firmware/testing/touch-test/main/: CMakeLists.txt  main.cpp
firmware/testing/vibration-test/: CMakeLists.txt  platformio.ini
firmware/testing/vibration-test/main/: CMakeLists.txt  main.cpp
firmware/wireless/communication/ble/: CMakeLists.txt  ble_client.cpp  ble_client.h  ble_manager.cpp  ble_manager.h  ble_server.cpp  ble_server.h
firmware/wireless/communication/esp_now/: CMakeLists.txt  esp_now_manager.cpp  esp_now_manager.h
firmware/wireless/communication/lora/: CMakeLists.txt  lora_sx1262.cpp  lora_sx1262.h
firmware/wireless/communication/mesh/: CMakeLists.txt  esp_mesh_manager.cpp  esp_mesh_manager.h  hybrid_transport.cpp  hybrid_transport.h
firmware/wireless/communication/ota/: CMakeLists.txt  ota_manager.cpp  ota_manager.h
firmware/wireless/communication/wifi/: CMakeLists.txt  idf_component.yml  wifi_http_client.cpp  wifi_http_client.h  wifi_http_server.cpp  wifi_http_server.h  wifi_manager.cpp  wifi_manager.h  wifi_services.cpp  wifi_services.h
firmware/wireless/communication/zigbee/: CMakeLists.txt  zigbee_manager.cpp  zigbee_manager.h
firmware/wireless/testing/ble-test/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
firmware/wireless/testing/esp-now-test/: CMakeLists.txt  platformio.ini
firmware/wireless/testing/lora-test/: CMakeLists.txt  platformio.ini
firmware/wireless/testing/mesh-test/: CMakeLists.txt  platformio.ini
firmware/wireless/testing/ota-test/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32d  sdkconfig.s3_wroom
firmware/wireless/testing/system-test/: CMakeLists.txt  platformio.ini
firmware/wireless/testing/wifi-test/: CMakeLists.txt  platformio.ini
firmware/wireless/testing/zigbee-test/: CMakeLists.txt  partitions.csv  platformio.ini  (+2 more)
(+36 files in other folders)
